--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,13 @@ dist-ssr
 
 #db folders
 db_data/
+backend/app/__pycache__/__init__.cpython-313.pyc
+backend/app/__pycache__/crud.cpython-313.pyc
+backend/app/__pycache__/database.cpython-313.pyc
+backend/app/__pycache__/main.cpython-313.pyc
+backend/app/__pycache__/models.cpython-313.pyc
+backend/app/__pycache__/schemas.cpython-313.pyc
+backend/app/routers/__pycache__/__init__.cpython-313.pyc
+backend/app/routers/__pycache__/auth.cpython-313.pyc
+backend/app/routers/__pycache__/comments.cpython-313.pyc
+backend/app/routers/__pycache__/products.cpython-313.pyc
