--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -8,15 +8,29 @@ pnpm-debug.log*
 lerna-debug.log*
 *.tmp
 
-node_modules
-dist
-dist-ssr
+# Node.js dependencies
+node_modules/
+
+# Build output
+dist/
+dist-ssr/
+
+# Local environment settings
 *.local
 
+# Virtual environments
+venv/
+env/
+.venv/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
@@ -24,15 +38,8 @@ dist-ssr
 *.sln
 *.sw?
 
-#db folders
+# Database data
 db_data/
-backend/app/__pycache__/__init__.cpython-313.pyc
-backend/app/__pycache__/crud.cpython-313.pyc
-backend/app/__pycache__/database.cpython-313.pyc
-backend/app/__pycache__/main.cpython-313.pyc
-backend/app/__pycache__/models.cpython-313.pyc
-backend/app/__pycache__/schemas.cpython-313.pyc
-backend/app/routers/__pycache__/__init__.cpython-313.pyc
-backend/app/routers/__pycache__/auth.cpython-313.pyc
-backend/app/routers/__pycache__/comments.cpython-313.pyc
-backend/app/routers/__pycache__/products.cpython-313.pyc
+
+# Ignore compiled Python files (more concise)
+*.py[cod]
