--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
+volumes:
+  db-data: {}
+  minio-data: {}
+
 services:
+  minio:
+    image: minio/minio:RELEASE.2024-12-18T13-15-44Z.fips
+    container_name: minio
+    # ports:
+    #   - "9000:9000"
+    #   - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: "minioadmin"
+      MINIO_ROOT_PASSWORD: "minioadmin"
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
+    networks:
+      - app_network
+
   backend:
     build:
       context: ./backend
@@ -9,8 +28,10 @@ services:
       SECRET_KEY: "SECRET_KEY"
       DELETED_USER_USERNAME: "deleted"
       DELETED_USER_EMAIL: "deleted@example.com"
-    volumes:
-      - ./backend/app/uploads:/app/uploads
+      MINIO_ENDPOINT: "minio:9000"
+      MINIO_ACCESS_KEY: "minioadmin"
+      MINIO_SECRET_KEY: "minioadmin"
+      MINIO_BUCKET_NAME: "uploads"
     ports:
       - "8000:8000"
     depends_on:
@@ -38,9 +59,10 @@ services:
       MYSQL_PASSWORD: password
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_0900_ai_ci
     volumes:
-        - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "3306:3306"
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db-data:/var/lib/mysql
+    # ports:
+    #   - "3306:3306"
     networks:
       - app_network
 
